# intel-balance-car

./: .gitignore  README.md
docs/: architecture.md  hardware.md  rdk-x5-sensor-stack.md  references.md  roadmap.md  serial-protocol.md
docs/decisions/: 2026-07-rdk-x5-navigation-summary.md
esp32/: README.md
esp32/ld03_microros_bridge/: .gitignore  README.md  platformio.ini
esp32/ld03_microros_bridge/include/: ld03_driver.h  network_config.example.h  scan_conversion.h
esp32/ld03_microros_bridge/src/: ld03_driver.cpp  main.cpp  scan_conversion.cpp
esp32/ld03_microros_bridge/test/: test_ld03_parser.cpp
esp32/skills/: README.md
firmware/balance-car/: README.md  platformio.ini
firmware/balance-car/src/: main.cpp
firmware/baseline-replica/: platformio.ini
firmware/baseline-replica/src/: main.cpp
mechanical/: README.md
pcb/: README.md
ros2_ws/src/balance_bot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/balance_bot_bringup/config/: ekf.yaml  nav2_params.yaml  slam_toolbox.yaml
ros2_ws/src/balance_bot_bringup/launch/: bringup.launch.py  camera.launch.py  handheld_localization.launch.py  handheld_mapping.launch.py  navigation.launch.py  sensors.launch.py  slam.launch.py
ros2_ws/src/balance_bot_bringup/scripts/: ld08_pwm.py
ros2_ws/src/balance_bot_bringup/test/: test_navigation_config.py
ros2_ws/src/balance_bot_description/: CMakeLists.txt  package.xml
ros2_ws/src/balance_bot_description/launch/: description.launch.py
ros2_ws/src/balance_bot_description/test/: test_urdf_structure.py
ros2_ws/src/balance_bot_description/urdf/: balance_bot.urdf.xacro
ros2_ws/src/balance_chassis_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/balance_chassis_driver/balance_chassis_driver/: chassis_driver_node.py
ros2_ws/src/ld03_lidar/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ld03_lidar/include/ld03_lidar/: ld03_parser.hpp
ros2_ws/src/ld03_lidar/launch/: ld03_lidar.launch.py
ros2_ws/src/ld03_lidar/src/: ld03_lidar_node.cpp  ld03_parser.cpp
ros2_ws/src/ld03_lidar/test/: test_ld03_parser.cpp
tools/: flash.py  monitor.py  tune.py
