<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>balance_bot_bringup</name>
  <version>0.1.0</version>
  <description>整机启动：底盘驱动 + EKF 融合 + 雷达 + SLAM/Nav2 的 launch 与参数</description>
  <maintainer email="xykk0257@gmail.com">DontRain</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>balance_chassis_driver</exec_depend>
  <exec_depend>balance_bot_description</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
